# spoofify

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/spoofify/: __init__.py  __main__.py
tests/: test_spoofify.py
