[project]
name = "spoofify"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Anna Hope", email = "hello@annahope.me" }
]
dependencies = [
    "quart>=0.19.6",
    "httpx>=0.27.2",
    "result>=0.17.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"spoofify" = "spoofify:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest-asyncio>=0.24.0",
    "black[d]>=24.8.0",
]

[tool.rye.scripts]
devserver = { cmd = "rye run spoofify", env-file = ".dev.env" }
prodserver = { cmd = "hypercorn spoofify:app", env-file = ".prod.env" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/spoofify"]
